--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@polpware/ngx-reactive-table",
-  "version": "9.5.2",
+  "version": "9.5.3",
   "peerDependencies": {
     "@angular/common": "^9.1.12",
     "@angular/core": "^9.1.12",
-    "@swimlane/ngx-datatable": "^17.1.0"
+    "@swimlane/ngx-datatable": "^17.1.0",
+    "@polpware/ngx-noty": "^9.0.0"
   },
   "dependencies": {
     "tslib": "^1.10.0"
