--- a/package.json
+++ b/package.json
@@ -1,25 +1,36 @@
 {
   "name": "@polpware/ngx-reactive-table",
-  "version": "9.7.0",
+  "version": "13.0.0",
   "peerDependencies": {
-    "@angular/common": "^9.1.12",
-    "@angular/core": "^9.1.12",
-    "@swimlane/ngx-datatable": "^17.1.0",
-    "@polpware/ngx-noty": "^9.0.0"
+    "@angular/common": "^13.0.0",
+    "@angular/core": "^13.0.0",
+    "@swimlane/ngx-datatable": "^20.0.0",
+    "@polpware/ngx-noty": "^13.0.0"
   },
   "dependencies": {
-    "tslib": "^1.10.0"
+    "tslib": "^2.0.0"
   },
-  "main": "bundles/polpware-ngx-reactive-table.umd.js",
-  "module": "fesm5/polpware-ngx-reactive-table.js",
-  "es2015": "fesm2015/polpware-ngx-reactive-table.js",
-  "esm5": "esm5/polpware-ngx-reactive-table.js",
-  "esm2015": "esm2015/polpware-ngx-reactive-table.js",
-  "fesm5": "fesm5/polpware-ngx-reactive-table.js",
-  "fesm2015": "fesm2015/polpware-ngx-reactive-table.js",
+  "module": "fesm2015/polpware-ngx-reactive-table.mjs",
+  "es2020": "fesm2020/polpware-ngx-reactive-table.mjs",
+  "esm2020": "esm2020/polpware-ngx-reactive-table.mjs",
+  "fesm2020": "fesm2020/polpware-ngx-reactive-table.mjs",
+  "fesm2015": "fesm2015/polpware-ngx-reactive-table.mjs",
   "typings": "polpware-ngx-reactive-table.d.ts",
+  "exports": {
+    "./package.json": {
+      "default": "./package.json"
+    },
+    ".": {
+      "types": "./polpware-ngx-reactive-table.d.ts",
+      "esm2020": "./esm2020/polpware-ngx-reactive-table.mjs",
+      "es2020": "./fesm2020/polpware-ngx-reactive-table.mjs",
+      "es2015": "./fesm2015/polpware-ngx-reactive-table.mjs",
+      "node": "./fesm2015/polpware-ngx-reactive-table.mjs",
+      "default": "./fesm2020/polpware-ngx-reactive-table.mjs"
+    }
+  },
   "sideEffects": false,
   "scripts": {
-    "prepublishOnly": "node --eval \"console.error('ERROR: Trying to publish a package that has been compiled by Ivy. This is not allowed.\\nPlease delete and rebuild the package, without compiling with Ivy, before attempting to publish.\\n')\" && exit 1"
+    "prepublishOnly": "node --eval \"console.error('ERROR: Trying to publish a package that has been compiled by Ivy in full compilation mode. This is not allowed.\\nPlease delete and rebuild the package with Ivy partial compilation mode, before attempting to publish.\\n')\" && exit 1"
   }
 }
